Added influence map and options to include the time series at the top of stability plots.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(person("Rebecca", "Killick", role=c("aut","cre"),email="r.killick@l
 Maintainer: Rebecca Killick <r.killick@lancs.ac.uk>
 BugReports: https://github.com/rkillick/changepoint.influence/issues
 URL: https://github.com/rkillick/changepoint.influence/
-Depends: R(>= 3.2), changepoint, grDevices
+Depends: R(>= 3.2), changepoint, grDevices, ggplot2, reshape, grid, gridExtra
 Suggests: testthat, vdiffr
 Description: The package allows users to input their data, segmentation and function used for the segmentation (and additional arguments) and the package calculates the influence of the data on the changepoint locations.  This can be used with the native changepoint package functions or a users personal function to identify changes.  There are options for different types of graphics to assess the influence.
 License: GPL
