Updated for data.table adding rbindlist functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ importFrom("ggplot2","ggplot","geom_raster","ggtitle","scale_fill_gradient2","th
 importFrom("reshape","melt")
 importFrom("grid","unit.pmax","textGrob")
 importFrom("gridExtra","grid.arrange")
+importFrom("data.table","rbindlist")
