Changes: - Added ability for users to specify changepoint colour and linetype in all graphics - Added ability for users to specify map colours in influence map. - Changed all exported function names to comply with CRAN standard on naming functions - Changed influence.generate.PELT to be incluence method on "cpt" object.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,14 @@
-exportPattern("^[[:alpha:]]+")
-
-importFrom("grDevices","colorRampPalette")
+import("changepoint")
+import("methods")
+importFrom("grDevices","colorRampPalette","hsv")
 importFrom("ggplot2","ggplot","geom_raster","ggtitle","scale_fill_gradient2","theme","geom_abline","geom_point","aes",
-           "geom_vline","ggplotGrob")
+           "geom_vline","ggplotGrob","labs","theme_classic","element_text","geom_line")
 importFrom("reshape","melt")
 importFrom("grid","unit.pmax","textGrob")
 importFrom("gridExtra","grid.arrange")
 importFrom("data.table","rbindlist")
+importFrom("graphics","par","abline","segments","axis","legend","hist")
+
+export("InfluenceMap","ParameterStability","LocationStability",
+       "StabilityOverview") # plots
+exportMethods("influence")
