- Merged difference plot into LocationStability with argument NOTE: can't do line types in plot(.,.,type='h').

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,5 @@ importFrom("data.table","rbindlist")
 importFrom("graphics","par","abline","segments","axis","legend","hist")
 
 export("InfluenceMap","ParameterStability","LocationStability",
-       "StabilityOverview","location.stabilityDIFF") # plots
+       "StabilityOverview") # plots
 exportMethods("influence")
