--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: changepoint.influence
 Type: Package
 Title: Package to calculate the influence of the data on a changepoint segmentation
-Version: 0.1
+Version: 1.0
 Date: 2020-09-15
 Authors@R: c(person("Rebecca", "Killick", role=c("aut","cre"),email="r.killick@lancs.ac.uk"),
         person("Ines", "Wilms", role="aut"))
@@ -11,7 +11,7 @@ URL: https://github.com/rkillick/changepoint.influence/
 Imports: data.table, ggplot2, gridExtra, reshape, graphics, methods
 Depends: R(>= 3.2), changepoint
 Suggests: testthat, vdiffr
-Description: The package allows users to input their data, segmentation and function used for the segmentation (and additional arguments) and the package calculates the influence of the data on the changepoint locations.  Currently this can only be used with the changepoint package functions to identify changes.  There are options for different types of graphics to assess the influence.
+Description: The package allows users to input their data, segmentation and function used for the segmentation (and additional arguments) and the package calculates the influence of the data on the changepoint locations.  Currently this can only be used with the changepoint package functions to identify changes, but we plan to extend this.  There are options for different types of graphics to assess the influence.
 License: GPL
 LazyData: true
 Packaged: 2021-06-22 15:55:29 UTC; killick
