--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ URL: https://github.com/rkillick/changepoint.influence/
 Imports: data.table, ggplot2, gridExtra, reshape, graphics, methods
 Depends: R(>= 3.2), changepoint
 Suggests: testthat, vdiffr
-Description: Allows users to input their data, segmentation and function used for the segmentation (and additional arguments) and the package calculates the influence of the data on the changepoint locations.  Currently this can only be used with the changepoint package functions to identify changes, but we plan to extend this.  There are options for different types of graphics to assess the influence.
+Description: Allows users to input their data, segmentation and function used for the segmentation (and additional arguments) and the package calculates the influence of the data on the changepoint locations, see Wilms et al. (2021) <arXiv:2107.10572>.  Currently this can only be used with the changepoint package functions to identify changes, but we plan to extend this.  There are options for different types of graphics to assess the influence.
 License: GPL
 LazyData: true
 Packaged: 2021-06-22 15:55:29 UTC; killick
