- added k option for influence function - added modify option to influence function to allow subsets of data to be modified in different ways - added n.modify option to influence function for some modify options - stremlined loo and moo functions - introduced cpt.call.R which handles the calling of the changepoint functions on the new datasets in preparation for expanding the set of models considered - added tests for the above (need more though!)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ importFrom("grid","unit.pmax","textGrob")
 importFrom("gridExtra","grid.arrange")
 importFrom("data.table","rbindlist")
 importFrom("graphics","par","abline","segments","axis","legend","hist")
+importFrom("stats","end")
 
 export("InfluenceMap","ParameterStability","LocationStability",
        "StabilityOverview") # plots
