--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,16 @@ Package: changepoint.influence
 Type: Package
 Title: Package to Calculate the Influence of the Data on a Changepoint Segmentation
 Version: 2.0
-Date: 2023-04-11
+Date: 2024-01-26
 Authors@R: c(person("Rebecca", "Killick", role=c("aut","cre"),email="r.killick@lancs.ac.uk"),
         person("Ines", "Wilms", role="aut"))
 Maintainer: Rebecca Killick <r.killick@lancs.ac.uk>
 BugReports: https://github.com/rkillick/changepoint.influence/issues
 URL: https://github.com/rkillick/changepoint.influence/
-Imports: data.table, ggplot2, gridExtra, reshape, graphics, methods
-Depends: R(>= 3.2), changepoint
+Imports: data.table, ggplot2, gridExtra, reshape, graphics, methods, stats
+Depends: R(>= 3.5), changepoint
 Suggests: testthat, vdiffr
-Description: Allows users to input their data, segmentation and function used for the segmentation (and additional arguments) and the package calculates the influence of the data on the changepoint locations, see Wilms et al. (2021) <arXiv:2107.10572>.  Currently this can only be used with the changepoint package functions to identify changes, but we plan to extend this.  There are options for different types of graphics to assess the influence.
+Description: Allows users to input their data, segmentation and function used for the segmentation (and additional arguments) and the package calculates the influence of the data on the changepoint locations, see Wilms et al. (2022) <https://doi.org/10.1080/10618600.2021.2000873>.  Currently this can only be used with the changepoint package functions to identify changes, but we plan to extend this.  There are options for different types of graphics to assess the influence.
 License: GPL
 LazyData: true
-Packaged: 2023-04-11 15:55:29 UTC; killick
+Packaged: 2024-01-26 15:55:29 UTC; killick
